--- a/ShellView.xaml
+++ b/ShellView.xaml
@@ -19,7 +19,7 @@
             <ColumnDefinition />
         </Grid.ColumnDefinitions>
         <StackPanel>
-            <!--  连接  -->
+            <!-- 连接 -->
             <StackPanel HorizontalAlignment="Center"
                         Orientation="Horizontal">
                 <ComboBox Name="IP"
@@ -39,6 +39,9 @@
             <Button x:Name="btnEnableFault"
                     Content="订阅中断"
                     Style="{StaticResource menuButton}" />
+            <Button x:Name="btnWriteRead"
+                    Content="读写测试"
+                    Style="{StaticResource menuButton}" />
             <StackPanel Orientation="Vertical">
                 <TextBlock Margin="17,0,5,0"
                            HorizontalAlignment="Center"
@@ -57,7 +60,7 @@
                 <RowDefinition Height="0.15*" />
                 <RowDefinition />
             </Grid.RowDefinitions>
-            <!--  轴参数  -->
+            <!-- 轴参数 -->
             <StackPanel Grid.Row="0"
                         Orientation="Horizontal">
                 <Button Name="OpenLogFunc"
@@ -92,7 +95,7 @@
             <StackPanel Grid.Row="1"
                         VerticalAlignment="Center"
                         Orientation="Horizontal">
-                <!--  轴号选择  -->
+                <!-- 轴号选择 -->
                 <TextBlock Margin="10,0"
                            HorizontalAlignment="Center"
                            VerticalAlignment="Center">
